# framework-tool-tui

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci-freebsd-test.yaml  ci-publish.yaml  ci-release.yaml  ci.yaml  commit-lint.yml  release-plz.yml
docs/: ARCHITECTURE.md  GRAPH_IMPLEMENTATION_PLAN.md  THERMAL_PANEL_PLAN.md  mvp-plan.md  tui-layout.md
src/: app.rs  config.rs  event.rs  framework.rs  lib.rs  main.rs  tui.rs
src/framework/: fingerprint.rs  info.rs
src/tui/: component.rs  control.rs  theme.rs
src/tui/component/: brightness_panel.rs  charge_graph_panel.rs  charge_panel.rs  charge_panels.rs  footer.rs  main.rs  pd_ports_panel.rs  privacy_panel.rs  smbios_panel.rs  thermal_graph_panel.rs  thermal_panel.rs  thermal_panels.rs  title.rs
src/tui/themes/: Alucard.rs  catppuccin-frappe.rs  catppuccin-latte.rs  catppuccin-macchiato.rs  catppuccin-mocha.rs  dracula.rs  framework.rs  github-dark.rs  github-light.rs  monokaipro-dark.rs  monokaipro-light.rs
