[package]
name = "framework-tool-tui"
version = "0.5.5"
edition = "2021"
description = "TUI for controlling and monitoring Framework Computers hardware built in Rust"
license = "MIT"
repository = "https://github.com/grouzen/framework-tool-tui"
authors = ["Michael Nedokushev <michael.nedokushev@gmail.com>"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28.1", features = ["event-stream"] }
anyhow = "1.0"
framework_lib = { git = "https://github.com/FrameworkComputer/framework-system.git", package = "framework_lib" }
smbios-lib = { git = "https://github.com/FrameworkComputer/smbios-lib.git", branch = "no-std", default-features = false }
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
uzers = { version = "0.12.1", default-features = false }
tui-popup = "0.6.0"
